# FirmaDigital

./: README.md
Código Fuente/firmadigital/: CHANGELOG.md  firmadigital.cabal
Código Fuente/firmadigital/app/: FirmaDigital.hs  Main.hs  clave_privada.txt  firma.txt
Código Fuente/firmadigital/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Ejecutable/: firma.txt  numero_publico.txt  texto.txt
