cabal-version:      2.4
name:               firmadigital
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             ddfulaa
maintainer:         ddfulaa@unal.edu.co

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable firmadigital
    --import: warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        FirmaDigital

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0,
        haskell-say ^>=1.0.0.0,
        Crypto ^>=4.2.5.2,
        hex
    hs-source-dirs:   app
    default-language: Haskell2010
